--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "nodemon": "^1.17.5",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "vconsole": "^3.2.0",
