vant基本可用,打包测试通过

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "fastclick": "^1.0.6",
     "vant": "^1.1.10",
+    "vconsole": "^3.2.0",
     "vue": "^2.5.2"
   },
   "devDependencies": {
