--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "fastclick": "^1.0.6",
     "vant": "^1.1.10",
     "vconsole": "^3.2.0",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vux": "^2.9.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -70,6 +71,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vux-loader": "^1.2.9",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
