增加了购物车演示页,将商品详情页预加载,

--- a/manifest.json
+++ b/manifest.json
@@ -210,7 +210,8 @@
 				"refer": [
 					"dist/user/index.html",
 					"dist/goods.detail.html",
-					"dist/mui.index.html"
+					"dist/mui.index.html",
+					"dist/vux.index.html"
 				],
 				"priority": 0
 			}
