打包上传,准备发布

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "icons": {
         "72": "icon.png"
     },
-    "launch_path": "http://192.168.199.156:8080",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+    "launch_path": "dist/index.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
     "developer": {
         "name": "",/*开发者名称*/
         "email": "",/*开发者邮箱地址*/
@@ -211,7 +211,8 @@
 					"dist/user/index.html",
 					"dist/goods.detail.html",
 					"dist/mui.index.html",
-					"dist/vux.index.html"
+					"dist/vux.index.html",
+					"dist/goods.cart.html"
 				],
 				"priority": 0
 			}
