--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin-for-multihtml": "^2.30.2",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
     "less": "^3.0.4",
