--- a/manifest.json
+++ b/manifest.json
@@ -3,15 +3,15 @@
   "id": "com.femirror.mogoh5" /*应用的标识，创建应用时自动生成，勿手动修改*/,
   "name": "MogoH5+" /*应用名称，程序桌面图标名称*/,
   "version": {
-    "name": "1.2.2" /*应用版本名称*/,
-    "code": "111"
+    "name": "1.2.16" /*应用版本名称*/,
+    "code": "124"
   },
   "description": "MogoH5+" /*应用描述信息*/,
   "icons": {
     "72": "icon.png"
   },
   "launch_path":
-    "http://192.168.199.153:8080" /*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/,
+    "dist/index.html" /*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/,
   "developer": {
     "name": "" /*开发者名称*/,
     "email": "" /*开发者邮箱地址*/,
@@ -184,91 +184,98 @@
     }
   },
   "dependencies": {
-    "idle": {
-      "resources": [
-        "src/assets/fonts/mui.ttf",
-        "test/unit/specs/HelloWorld.spec.js",
-        "src/page/goods/detail.js",
-        "dist/goods/detail.html",
-        "src/utils/webview.js",
-        "dist/assets/css/mui/index.56e5f56fc0bd813623b07c32aedb0e8c.css",
-        "src/assets/fonts/mui-icons-extra.ttf",
-        "src/assets/mui/mui.min.js",
-        "dist/map/map.js",
-        "dist/assets/img/logo.adf2bc3.png",
-        "build/mui-loader.js",
-        "package.json",
-        "src/page/mui/index.js",
-        "build/check-versions.js",
-        "config/dev.env.js",
-        "package-lock.json",
-        "README.md",
-        "test/unit/jest.conf.js",
-        "src/page.json",
-        "docs/README.md",
-        "build/webpack.dev.conf.js",
-        "src/page/map/map.vue",
-        "index.html",
-        "test/unit/setup.js",
-        "src/utils/envent.js",
-        "src/assets/mui/mui.css",
-        "src/assets/logo.png",
-        "build/multipage.js",
-        "config/test.env.js",
-        "dist/assets/css/map/map.2d75f521352cb21662b356ac39e8c9ce.css",
-        "src/main.js",
-        "src/page/map/map.js",
-        "src/components/content.vue",
-        "dist/map/map.html",
-        "dist/app.js",
-        "config/index.js",
-        "src/utils/request.js",
-        "src/utils/common.js",
-        "src/page/user/index.vue",
-        "src/components/HelloWorld.vue",
-        "dist/vux/index.js",
-        "dist/vux/index.html",
-        "dist/assets/css/user/index.67f3ac9443309c4cdb0fbfa855200001.css",
-        "build/utils.js",
-        "dist/mui/index.html",
-        "dist/assets/fonts/mui.8820b7f.ttf",
-        "build/logo.png",
-        "src/page/goods/detail.vue",
-        "build/vue-loader.conf.js",
-        "dist/mui/index.js",
-        "src/page/vux/index.vue",
-        "docs/deploy.sh",
-        "build/build.js",
-        "src/App.vue",
-        "config/prod.env.js",
-        "dist/user/index.js",
-        "build/webpack.base.conf.js",
-        "dist/assets/css/goods/detail.99776475e779987e734405cbb06f0dcd.css",
-        "src/page/user/index.js",
-        "dist/assets/css/app.e4cc5007c4501d913a3ad4364b16bf23.css",
-        "dist/goods/detail.js",
-        "src/components/logo.vue",
-        "src/page/vux/index.js",
-        "src/page/mui/index.vue",
-        "docs/guide.md",
-        "build/webpack.prod.conf.js",
-        "dist/assets/css/vux/index.e04574f3b1ee9b1e211545fbaea0a4b4.css"
-      ]
-    },
-    "pages": {
-      "dist/index.html": {
-        "resources": [],
-        "refer": [
-          "dist/user/index.html",
-          "dist/goods.detail.html",
-          "dist/mui.index.html",
-          "dist/vux.index.html",
-          "dist/goods.cart.html"
-        ],
-        "priority": 0
-      }
-    }
-  },
+		"idle": {
+			"resources": [
+				"src/assets/fonts/mui.ttf",
+				"test/unit/specs/HelloWorld.spec.js",
+				"src/page/goods/detail.js",
+				"dist/goods/detail.html",
+				"src/utils/webview.js",
+				"dist/assets/css/mui/index.56e5f56fc0bd813623b07c32aedb0e8c.css",
+				"src/assets/fonts/mui-icons-extra.ttf",
+				"src/assets/mui/mui.min.js",
+				"dist/map/map.js",
+				"dist/assets/img/logo.adf2bc3.png",
+				"build/mui-loader.js",
+				"package.json",
+				"src/page/mui/index.js",
+				"build/check-versions.js",
+				"config/dev.env.js",
+				"package-lock.json",
+				"README.md",
+				"test/unit/jest.conf.js",
+				"src/page.json",
+				"docs/README.md",
+				"build/webpack.dev.conf.js",
+				"src/page/map/map.vue",
+				"index.html",
+				"test/unit/setup.js",
+				"src/utils/envent.js",
+				"src/assets/mui/mui.css",
+				"src/assets/logo.png",
+				"build/multipage.js",
+				"config/test.env.js",
+				"dist/assets/css/map/map.2d75f521352cb21662b356ac39e8c9ce.css",
+				"src/main.js",
+				"src/page/map/map.js",
+				"src/components/content.vue",
+				"dist/map/map.html",
+				"dist/app.js",
+				"config/index.js",
+				"src/utils/request.js",
+				"src/utils/common.js",
+				"src/page/user/index.vue",
+				"src/components/HelloWorld.vue",
+				"dist/vux/index.js",
+				"dist/vux/index.html",
+				"dist/assets/css/user/index.67f3ac9443309c4cdb0fbfa855200001.css",
+				"build/utils.js",
+				"dist/mui/index.html",
+				"dist/assets/fonts/mui.8820b7f.ttf",
+				"build/logo.png",
+				"src/page/goods/detail.vue",
+				"build/vue-loader.conf.js",
+				"dist/mui/index.js",
+				"src/page/vux/index.vue",
+				"docs/deploy.sh",
+				"build/build.js",
+				"src/App.vue",
+				"config/prod.env.js",
+				"dist/user/index.js",
+				"build/webpack.base.conf.js",
+				"dist/assets/css/goods/detail.99776475e779987e734405cbb06f0dcd.css",
+				"src/page/user/index.js",
+				"dist/assets/css/app.e4cc5007c4501d913a3ad4364b16bf23.css",
+				"dist/goods/detail.js",
+				"src/components/logo.vue",
+				"src/page/vux/index.js",
+				"src/page/mui/index.vue",
+				"docs/guide.md",
+				"build/webpack.prod.conf.js",
+				"dist/assets/css/vux/index.e04574f3b1ee9b1e211545fbaea0a4b4.css"
+			]
+		},
+		"pages": {
+			"dist/index.html": {
+				"resources": [],
+				"refer": [
+					"dist/user/index.html",
+					"dist/goods.detail.html",
+					"dist/mui.index.html",
+					"dist/vux.index.html",
+					"dist/goods.cart.html"
+				],
+				"priority": 0
+			},
+			"dist/vux.index.html": {
+				"resources": [
+					"dist/assets/css/vux.index.css"
+				],
+				"refer": [],
+				"priority": 0
+			}
+		}
+	},
   "unpackage": [
     "src/page/user/index.js",
     "src/page/user/index.vue",
