--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "id": "com.femirror.mogoh5" /*应用的标识，创建应用时自动生成，勿手动修改*/,
   "name": "MogoH5+" /*应用名称，程序桌面图标名称*/,
   "version": {
-    "name": "1.2.91" /*应用版本名称*/,
+    "name": "1.2.92" /*应用版本名称*/,
     "code": "141"
   },
   "description": "MogoH5+" /*应用描述信息*/,
@@ -11,7 +11,7 @@
     "72": "icon.png"
   },
   "launch_path":
-    "dist/index.html" /*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/,
+    "http://192.168.199.153:8080" /*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/,
   "developer": {
     "name": "" /*开发者名称*/,
     "email": "" /*开发者邮箱地址*/,
