--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mogo-h5plus",
   "version": "1.3.0",
   "description": "A Scaffolding To Develop H5+ App Fast.",
-  "author": "滕亚庆 <626019610@qq.com>",
+  "author": "ArH <626019610@qq.com>",
   "private": true,
   "scripts": {
     "dev": "nodemon -e json --exec  \"webpack-dev-server --inline --progress --config build/webpack.dev.conf.js\"",
