--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "fastclick": "^1.0.6",
+    "fastclick": "git+https://github.com/mogoclub/fastclick.git",
     "vant": "^1.1.10",
     "vconsole": "^3.2.0",
     "vue": "^2.5.2",
