增加VConsole的配置

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "id": "com.femirror.mogoh5" /*应用的标识，创建应用时自动生成，勿手动修改*/,
   "name": "MogoH5+" /*应用名称，程序桌面图标名称*/,
   "version": {
-    "name": "1.3.13" /*应用版本名称*/,
+    "name": "1.3.45" /*应用版本名称*/,
     "code": "141"
   },
   "description": "MogoH5+" /*应用描述信息*/,
@@ -11,7 +11,7 @@
     "72": "icon.png"
   },
   "launch_path":
-    "http://192.168.199.154:8080" /*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/,
+    "dist/index.html" /*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/,
   "developer": {
     "name": "" /*开发者名称*/,
     "email": "" /*开发者邮箱地址*/,
@@ -63,19 +63,7 @@
         "keystore": "" /*Android应用打包使用的密钥库文件*/,
         "password": "" /*Android应用打包使用密钥库中证书的密码*/,
         "aliasname": "" /*Android应用打包使用密钥库中证书的别名*/,
-        "permissions": [
-          "<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>",
-          "<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>",
-          "<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>",
-          "<uses-permission android:name=\"android.permission.VIBRATE\"/>",
-          "<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
-          "<uses-permission android:name=\"android.permission.CALL_PHONE\"/>",
-          "<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
-          "<uses-feature android:name=\"android.hardware.camera.autofocus\"/>",
-          "<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>",
-          "<uses-feature android:name=\"android.hardware.camera\"/>",
-          "<uses-permission android:name=\"android.permission.CAMERA\"/>"
-        ]
+        "permissions": ["<uses-feature android:name=\"android.hardware.camera.autofocus\"/>","<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>","<uses-feature android:name=\"android.hardware.camera\"/>","<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>","<uses-permission android:name=\"android.permission.CAMERA\"/>"]
         /*使用Native.js调用原生安卓API需要使用到的系统权限*/
       },
       "orientation": [
